# meeting-os

./: .dockerignore  .env.example  .gitignore  PLAN.md  README.md  SPEC.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: eval.yml  lint.yml  test.yml
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_init.py
api/app/: config.py  graph.py  main.py  pipeline.py  queue.py  worker.py
api/app/agents/: __init__.py  _base.py  action_item.py  decision.py  merge.py  summary.py
api/app/agents/prompts/: action_item.md  decision.md  summary.md
api/app/db/: models.py  session.py
api/app/eval/: run.py  scorer.py
api/app/ingestion/: chunker.py  embedder.py  parser.py  whisper_adapter.py
api/app/mcp/: __init__.py  client.py  crypto.py  dependencies.py  gmail.py  linear.py  store.py
api/app/models/: io.py
api/app/routes/: dispatch.py  health.py  integrations.py  meetings.py  search.py  sse.py
api/tests/integration/: conftest.py  test_audio.py  test_gmail.py  test_integrations_route.py  test_linear.py  test_list_meetings.py  test_meeting_detail.py  test_pipeline.py  test_search.py  test_upload.py  test_worker.py
api/tests/unit/: test_action_agent.py  test_chunker.py  test_decision_agent.py  test_dispatch_route.py  test_docker_compose.py  test_embedder.py  test_eval_run.py  test_eval_scorer.py  test_gmail_client.py  test_gmail_dispatch_route.py  test_graph.py  test_health.py  test_linear_client.py  test_mcp_client.py  test_mcp_crypto.py  test_merge.py  test_parser.py  test_run_graph.py  test_search_route.py  test_sse_route.py  test_summary_agent.py  test_whisper_adapter.py
fixtures/: eval_baseline.json
fixtures/eval/: expected_01.json  expected_02.json  expected_03.json  expected_04.json  expected_05.json  transcript_01.txt  transcript_02.txt  transcript_03.txt  transcript_04.txt  transcript_05.txt
web/: .dockerignore  .env.example  Dockerfile  middleware.ts  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
web/app/: layout.tsx  page.tsx
web/components/: ActionItemTable.tsx  (+9 more)
(+35 files in other folders)
