[project]
name = "meeting-os-api"
version = "0.1.0"
description = "MeetingOS API — agent orchestration + ingestion"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = []

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
